--- a/package.json
+++ b/package.json
@@ -10,8 +10,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@react-native-firebase/app": "^19.0.1",
+    "@react-native-firebase/auth": "^19.0.1",
+    "@react-native-firebase/firestore": "^19.0.1",
+    "@react-navigation/bottom-tabs": "^7.0.0-alpha.18",
+    "@react-navigation/native": "^7.0.0-alpha.15",
+    "@react-navigation/native-stack": "^7.0.0-alpha.16",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-hook-form": "^7.51.1",
+    "react-native": "0.73.6",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "yup": "^1.4.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
