--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/app": "^19.0.1",
     "@react-native-firebase/auth": "^19.0.1",
     "@react-native-firebase/firestore": "^19.0.1",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^7.0.0-alpha.18",
     "@react-navigation/native": "^7.0.0-alpha.15",
     "@react-navigation/native-stack": "^7.0.0-alpha.16",
