--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@react-navigation/bottom-tabs": "^7.0.0-alpha.18",
     "@react-navigation/native": "^7.0.0-alpha.15",
     "@react-navigation/native-stack": "^7.0.0-alpha.16",
+    "date-fns": "^3.6.0",
     "react": "18.2.0",
     "react-hook-form": "^7.51.1",
     "react-native": "0.73.6",
+    "react-native-mask-input": "^1.2.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-vector-icons": "^10.0.3",
     "yup": "^1.4.0",
     "zustand": "^4.5.2"
   },
