--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.0.0-alpha.15",
     "@react-navigation/native-stack": "^7.0.0-alpha.16",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.0.1",
     "react": "18.2.0",
     "react-hook-form": "^7.51.1",
     "react-native": "0.73.6",
