--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-hook-form": "^7.51.1",
     "react-native": "0.73.6",
+    "react-native-date-picker": "^5.0.1",
     "react-native-mask-input": "^1.2.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
